--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -39,7 +39,7 @@ nopaBlog:
 ######################################
 logging:
   level:
-    root: warn
+    root: debug
     com.qiang.modules.sys.dao: trace
   pattern:
     console: '%p%m%n'
